# psrfits

./: .gitattributes  .gitignore  LICENSE.md  pyproject.toml  setup.cfg  setup.py
psrfits/: __init__.py  _version.py  averaging.py  baseline.py  datafile.py  dataset.py  dispersion.py  formatting.py  helpers.py  loading.py  plots.py  polarization.py  polyco.py  receiver-info.toml  saving.py  t2predict.py  uniform.py
psrfits/attrs/: __init__.py  attrcollection.py  backend.py  beam.py  calibrator.py  frontend.py  history.py  observation.py  polyco.py  source.py  t2predict.py  telescope.py
xpsrfits/: .polarization.py.kate-swp  __init__.py  baseline.py  dataset.py  datasets.py  dispersion.py  formatting.py  frontend.py  helpers.py  load.py  loading.py  observation.py  plots.py  polarization.py  saving.py  source.py  standard-comments.toml  telescope.py
xpsrfits/attrs/: __init__.py  attrcollection.py  backend.py  beam.py  calibrator.py  frontend.py  history.py  observation.py  polyco.py  source.py  telescope.py
