[build-system]
requires = ["setuptools >= 61.0", "setuptools_scm[toml] >= 6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "psrfits"
dynamic = ["version"]
authors = [
    {name = "Ross Jennings", email = "ross.jennings@nanograv.org"},
]
dependencies = [
    "numpy",
    "astropy",
    "pint-pulsar",
    "toml",
    "pywavelets",
    "dask",
]

[tool.setuptools_scm]
write_to = "psrfits/_version.py"
