[build-system]
requires = ["setuptools >= 61.0", "versioneer[toml] == 0.28"]
build-backend = "setuptools.build_meta"

[project]
name = "psrfits"
dynamic = ["version"]
authors = [
    {name = "Ross Jennings", email = "ross.jennings@nanograv.org"},
]
dependencies = [
    "numpy",
    "astropy",
    "pint-pulsar",
    "toml",
    "pywavelets",
    "dask",
]

[tool.versioneer]
VCS = "git"
style = "pep440"
versionfile_source = "psrfits/_version.py"
versionfile_build = "psrfits/_version.py"
tag_prefix = "v"
parentdir_prefix = "psrfits-"
